src/tags/snapshots/libmoonwave__tags__param__test__lovecraftian_type.snap
---
source: src/tags/param.rs
expression: value
---
name: foo
desc: "I'm sorry."
lua_type: "Roact.Element<{ oh_no: string -> coroutine }>"
