src/tags/snapshots/libmoonwave__tags__param__test__no_description.snap
---
source: src/tags/param.rs
expression: value
---
name: coffee
desc: ~
lua_type: tasty
source: coffee tasty
