src/tags/snapshots/libmoonwave__tags__param__test__no_type.snap
---
source: src/tags/param.rs
expression: value
---
Err:
  text: Param type is required
  start: 0
  len: 31
  file_id: 0
  additional_diagnostics: []
