src/tags/snapshots/libmoonwave__tags__param__test__snapshot.snap
---
source: src/tags/param.rs
expression: "ParamTag::try_from(Span::dummy(\"coffee\"))"
---
Err:
  text: Param type is required
  start: 0
  len: 6
  file_id: 0
  additional_diagnostics: []
